--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
 search feature
-close menu on click to final item in small screen 
+close menu on click to final item in small screen
+back button handling 
