--- a/Anabasis.Exporter/TODO.txt
+++ b/Anabasis.Exporter/TODO.txt
@@ -1,5 +1,3 @@
-parameterless for Activator Event/Command
 snapshot storage
 actor building and registration
-event registration based on actor implementation
-tidy up EventId/CommandID StreamID
+logging
